<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3"
    android:layout_margin="10dp"
    tools:context=".UserDatabase">

    <TableRow android:background="@color/grey">
        <TextView
            android:text="@string/user_role"
            android:textColor="#FFF"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_column="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:text="@string/user_id"
            android:textColor="#FFF"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_column="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:text="@string/user_name"
            android:textColor="#FFF"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_column="1"
            android:gravity="center_horizontal"/>

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_database_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</TableLayout>