<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textColor="#9309C7"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956">

        <LinearLayout
            android:id="@+id/categoriesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/ph_dev"
                android:layout_width="230dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/temperatureLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/sofia_bold"
                    android:text="23C"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="57dp"
                    android:fontFamily="@font/sofia_light"
                    android:text="@string/temperature_1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tempLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/sofia_bold"
                    android:text="23C"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="130dp"
                    android:fontFamily="@font/sofia_light"
                    android:text="@string/temperature_2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/temp_dev"
                android:layout_width="370dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/sofia_bold"
                    android:text="114C"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="110dp"
                    android:src="@drawable/ic_baseline_add" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="110dp"
                    android:src="@drawable/ic_baseline_horizontal" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="45dp"
                    android:src="@mipmap/celcius" />

                <Button
                    android:id="@+id/themButton"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/set_btn_layout"
                    android:text="@string/set"
                    android:textSize="13sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/calibrate_dev"
            android:layout_width="630dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/sofia_light"
                android:text="@string/device_status"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/set_btn_layout"/>

            <Button
                android:id="@+id/modeButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="30dp"
                android:background="@drawable/start_btn_layout"
                android:text="@string/start"
                android:textSize="13sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner_layout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/sofia_light"
                android:text="@string/start_date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="80dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/spinner_layout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="80dp"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/sofia_light"
                android:text="@string/end_date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/sofia_light"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/sofia_light"
                android:text="@string/end_time"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>