<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.temp.LogTempFragment">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graph"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

        </com.github.mikephil.charting.charts.LineChart>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/ph_dev"
                android:layout_width="230dp"
                android:background="#fff"
                android:backgroundTint="#fff"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/temperatureLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/sofia_bold"
                    android:text="23C"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="57dp"
                    android:fontFamily="@font/sofia_light"
                    android:text="@string/temperature_1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tempLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/sofia_bold"
                    android:text="23C"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="130dp"
                    android:fontFamily="@font/sofia_light"
                    android:text="@string/temperature_2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/logBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#3CEA43"
                    android:text="@string/log"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="Print"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:visibility="visible" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:id="@+id/table_heading_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/table_border">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        style="@style/table_header"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_column="0"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/table_header"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_column="2"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingEnd="5dp"
                        android:text="Temp 1"
                        android:textAlignment="center"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        style="@style/table_header"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_column="2"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingEnd="5dp"
                        android:text="Temp 2"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/table_header"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_column="2"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingEnd="5dp"
                        android:text="Set Temp"
                        android:textAlignment="center"
                        tools:ignore="RtlSymmetry" />
                </TableRow>
            </TableLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/table_heading_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                tools:listitem="@layout/item_log" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCSVLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerViewLog"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
